--- a/configuracion.html
+++ b/configuracion.html
@@ -22,28 +22,20 @@
             </ul>
         </nav>
     </header>
-
+    <!-- Contenido principal -->
     <main class="contenido">
         <section>
-            <h1>Ofertas de trabajo</h1>
-            <article>
-                <h2>Administrador de redes</h2>
-                <p>Empresa tecnológica busca administrador de redes con experiencia en servidores Linux y AWS. (P6)</p>
-            </article>
-
-            <article>
-                <h2>Desarrollador Full Stack</h2>
-                <p>Se requiere programador con conocimientos en HTML5, CSS3, JavaScript y bases de datos SQL.</p>
-            </article>
-
-            <article>
-                <h2>Entrevista simulada</h2>
-                <p>Se ha realizado una entrevista práctica sobre competencias técnicas y trabajo en equipo.</p>
-            </article>
+            <p class="eslogan">Ideas tecnológicas con impacto educativo</p>
+            <h1>Instalación y configuración de los servicios de red del vivero.</h1>
+            <p>Se explicará la configuración de los servicios de red en los servidores del vivero (P5).</p>
+            <br>
+            <p>En esta primera fase de la implantación se configurarán tres servicios de red:</p>
+            <p>P5.1- Servicio de configuración parámetros de red de forma dinámica para asignación dinámica de los parámetros de red del equipamiento cableado de la red del vivero.</p>
+            <p>P5.2- Servicio de acceso remoto en modo gráfico para permitir la configuración remota de los servidores del vivero en modo gráfico.</p>
+            <p>P5.3- Servicio de transferencia de archivos al servidor del vivero. La transferencia de archivos la podrán realizar los 4 usuarios del sistema y se definirá por el equipo la estructura de carpetas y archivos a los que podrán acceder, teniendo en cuenta que deberá existir un área común de almacenamiento y un área personal para cada usuario. Se documentará todo el proceso seguido en la configuración de los servicios en los servidores del vivero. Además se deberán incluir evidencias de que los servicios están funcionando correctamente.</p>  
+            <br>
         </section>
-    </main>
-
-    <!-- PIE DE PÁGINA -->
+        <!-- PIE DE PÁGINA -->
         <footer>
             <div class="footer-logo">
                 <img src="img/LogoVivero.png" alt="Logo del vivero" class="footer-logo" />
