--- a/diseño.html
+++ b/diseño.html
@@ -22,30 +22,20 @@
             </ul>
         </nav>
     </header>
-
+    <!-- Contenido principal -->
     <main class="contenido">
         <section>
-            <h1>Contacto</h1>
-            <p>Si tu empresa está interesada en alojarse en el vivero, rellena el siguiente formulario:</p>
-
-            <form action="#" method="post" class="formulario-contacto">
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required>
-
-                <label for="email">Correo electrónico:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="empresa">Empresa:</label>
-                <input type="text" id="empresa" name="empresa">
-
-                <label for="mensaje">Mensaje:</label>
-                <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
-
-                <button type="submit">Enviar</button>
-            </form>
+            <p class="eslogan">Ideas tecnológicas con impacto educativo</p>
+            <h1>Diseño y puesta en marcha infraestructura de red</h1>
+            <p>Se mostrará el diseño de la infraestructura de red del vivero de empresas (packet tracert ) y la puesta en marcha de la red LAN e interconexión con la red del centro San Luis (P2)</p>
+            <br>
+            <p>El vivero dispondrá de una red LAN cableada independiente a la del centro para permitir el acceso a los recursos del vivero (servidores, impresoras, ordenadores ikasenpresa). 
+                Para mayor seguridad se definirá una red virtual por cada empresa del vivero (equipo). La red del vivero estará conectada a Internet a través de la red del centro San Luis.</p>
+            <p>El diseño deberá incluir la configuración física y lógica de la red en el packet tracert, explicando la configuración realizada e identificando las características de los dispositivos de red necesarios para la infraestructura del vivero.</p>
+            <p>Se realizará la instalación y configuración de los dispositivos de red para la red LAN del vivero y conexión con la red del centro. Se documentará todo el proceso explicando la configuración realizada en los Switches y Routers y se mostrarán las pruebas de acceso al equipamiento del vivero
+                desde la red del centro y desde el exterior. Antes de la configuración del equipamiento real, cada pareja deberá configurar y probar la infraestructura en el packet tracert.</p>
+            <br>
         </section>
-    </main>
-
     <!-- PIE DE PÁGINA -->
         <footer>
             <div class="footer-logo">
