--- a/incidencias.html
+++ b/incidencias.html
@@ -22,27 +22,21 @@
             </ul>
         </nav>
     </header>
-
+    <!-- Contenido principal -->
     <main class="contenido">
         <section>
-            <h1>Ofertas de trabajo</h1>
-            <article>
-                <h2>Administrador de redes</h2>
-                <p>Empresa tecnológica busca administrador de redes con experiencia en servidores Linux y AWS. (P6)</p>
-            </article>
-
-            <article>
-                <h2>Desarrollador Full Stack</h2>
-                <p>Se requiere programador con conocimientos en HTML5, CSS3, JavaScript y bases de datos SQL.</p>
-            </article>
-
-            <article>
-                <h2>Entrevista simulada</h2>
-                <p>Se ha realizado una entrevista práctica sobre competencias técnicas y trabajo en equipo.</p>
-            </article>
+            <p class="eslogan">Ideas tecnológicas con impacto educativo</p>
+            <h1>Incidencias instalación</h1>
+            <p>Las incidencias que se produzcan en la instalación y configuración de los servidores deberán ser documentadas y publicadas en esta sección.</p>
+            <br>
+            <p>Todas las incidencias que se produzcan durante la instalación y configuración de la infraestructura informática en el vivero deberán ser documentadas e incluirán la siguiente información:</p>
+            <p>● Datos generales: deberá incluir fecha apertura incidencia, fecha cierre incidencia, alumno/s responsable/s, estado incidencia (abierta/cerrada solucionada/cerrada sin solución)</p>
+            <p>● Descripción incidencia detallada: deberá incluir imágen error, descripción del error, acciones realizadas antes que se produjera la incidencia y cualquier dato que pueda ser relevante para solucionar la incidencia</p>
+            <p>● Búsquedas realizadas para solucionar la incidencia. Se deberán incluir los enlaces de las páginas web consultadas (como mínimo 3 páginas) y las posibles soluciones encontradas.</p>
+            <p>● Pruebas realizadas: todas las pruebas que se realicen deben ser documentadas detalladamente con imágenes de los comandos ejecutados,etc..</p>
+            <p>● Solución adoptada: Si alguna de las pruebas realizadas ha corregido la incidencia deberá ser descrita.</p>
+            <br>
         </section>
-    </main>
-
     <!-- PIE DE PÁGINA -->
         <footer>
             <div class="footer-logo">
