--- a/sostenibilidad.html
+++ b/sostenibilidad.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sostenibilidad - Vivero de Empresas</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ImpulsaNETika</title>
+  <link rel="stylesheet" href="css/nuevostylo.css" />
 </head>
 <body>
-    <header>
-        <a href="index.html" class="logo"><img src="img/logo-vivero.png" alt="Logo del vivero"></a>
-        <nav>
+<!-- ENCABEZADO -->
+    <header class="Encabezado">
+        <a href="principal.html" class="logo">
+        <img src="img/LogoVivero.png" alt="Logo vivero" />
+        </a>
+        <nav class="menu">
             <ul>
-                <li><a href="principal.html">Inicio</a></li>
-                <li><a href="index.html">¿Qué ofrecemos?</a></li>
+                <li><a href="principal.html">¿Qué ofrecemos?</a></li>
                 <li><a href="empresas.html">Empresas</a></li>
-                <li><a href="sostenibilidad.html" class="activo">Sostenibilidad</a></li>
+                <li><a href="sostenibilidad.html">Sostenibilidad</a></li>
                 <li><a href="ofertas.html">Ofertas de trabajo</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
+    <main class="contenido">
         <section>
             <h1>Sostenibilidad</h1>
             <article>
@@ -35,15 +37,20 @@
         </section>
     </main>
 
-    <footer>
-        <img src="img/logo-vivero.png" alt="Logo del vivero" class="footer-logo">
-        <p>© 2025 Vivero de Empresas | Autor: <strong>[Alumno 3]</strong></p>
-        <p><a href="#">Aviso de protección de datos</a></p>
-        <div class="redes">
-            <a href="#"><img src="img/icon-facebook.svg" alt="Facebook"></a>
-            <a href="#"><img src="img/icon-twitter.svg" alt="Twitter"></a>
-            <a href="#"><img src="img/icon-instagram.svg" alt="Instagram"></a>
-        </div>
-    </footer>
+<!-- PIE DE PÁGINA -->
+        <footer>
+            <div class="footer-logo">
+                <img src="img/LogoVivero.png" alt="Logo del vivero" class="footer-logo" />
+            </div>
+            <p>© 2025 Vivero Educativo Inmersivo | Protección de datos garantizada</p>
+            <p>Autor: Nombre</p>
+            <br>
+            <div class="redes">
+                <a href="#"><img src="img/iconoFacebook.png" alt="Facebook" /></a>
+                <a href="#"><img src="img/iconoTwiter.png" alt="Twitter" /></a>
+                <a href="#"><img src="img/iconoInstagram.png" alt="Instagram" /></a>
+            </div>
+        </footer>
+    </main>
 </body>
 </html>
